# smotritel

./: Dockerfile  LICENSE  README.md  README.ru.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
src/smotritel/: config.py  i18n.py  main.py
src/smotritel/core/: __init__.py  docker_prov.py  dto.py  f2b_prov.py  monitor.py
tests/: test_config_i18n.py  test_core_helpers.py  test_docker_provider.py  test_f2b_provider.py  test_monitor.py  test_rate_limiter.py
