[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smotritel"
version = "0.1.0"
description = "Lightweight async DevOps informer for Telegram and Discord."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Smotritel Non-Commercial License 1.0" }
dependencies = [
    "aiogram>=3.4.0",
    "discord.py>=2.3.0",
    "psutil>=5.9.0",
    "docker>=7.0.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
smotritel = "smotritel.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
